# -

./: .env.example  .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml  requirements.txt  server.py  步骤.md
agents/: __init__.py  art_designer.py  base_agent.py  content_grader.py  continuity_recorder.py  emotion_architect.py  episode_architect.py  episode_director.py  image_generator.py  insight_architect.py  knowledge_curator.py  novel_analyzer.py  review_director.py  script_comparator.py  script_writer.py  storyboard_artist.py  storyboard_director.py  visual_storyteller.py
builders/: schema_v2.py  script_builder.py
crawler/: __init__.py  catalog.py  downloader.py  searcher.py
engine/: __init__.py  pipeline.py  state_manager.py  task_queue.py
extractors/: character_tracker.py  llm_extractor.py  rule_extractor.py
knowledge/: source_registry.md
novel-to-script-yaml/: app.py  config.yaml  extractor.py  main.py  mock_extractor.py  requirements.txt  script_builder.py  scripts-yaml-schema.md
novel-to-script-yaml/output/: 青云之路_剧本.yaml
novel-to-script-yaml/sample_novel/: 02_客栈风波.txt
sample_novel/: 01_初入江湖.txt  03_青云之路.txt
schema/: scripts-yaml-schema-v2.md
skills/: __init__.py  adaptation_analysis.py  conflict_analyzer.py  content_grading.py  episode_planning.py  episode_rhythm.py  image_skills.py  knowledge_curation.py  review_skills.py  script_writing.py  storyboard_skills.py
tests/: test_conflict_analyzer.py  test_content_grading.py
uploads/测试项目/: 01_初入江湖.txt  02_客栈风波.txt  03_青云之路.txt
web/: package-lock.json  package.json
(+13 files in other folders)
